Linking a collection with instances inside will place the instanced object in the scene #61796

Closed
opened 2019-02-21 12:27:21 +01:00 by Sebastian Koenig · 4 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX 1080

Blender Version
Broken: 2.80, f4d9e49f28

Worked: 2.79

Short description of error
This is kind of a follow up of #61683.
The crashing has been fixed (thanks @mont29). But now a different weird behavior is happening.
If you link a collection instance ("col_A") from a blendfile, and inside that collection ("col_A") is another collection instance ("col_B"), it places the original geometry from "col_B" in the center of the blendfile as well. That messes up the scene of course, both for viewport and rendering.
It does work as expected in 2.79, so I would consider this more a bug than design issue.

Exact steps for others to reproduce the error
Testcase:
I have a file with a fancy table. There's 4 plates with some delicious Suzannes on them.
But to keep the filesize small I have put the plate with the Suzannes on it into a collection "yummy_plate".
Then I modelled a table and put 4 instances of the yummy_plate collection on it.
The table and the 4 plates I have put into the collection "fancy_table" and saved that as blendfile "fancy_table".

Now I am working on the main scene, a dining room. There should be many of those tables, so I link in the collection "fancy_table" from that blendfile. But instead of just placing the instance in the scene (like it used to work in 2.79), Blender now also places the linked object of the plate and the Suzannes in the scene, at the scene origin. Since they are linked I cannot move it out ot the way, nor toggle the renderability button in the outliner. I cannot even move it into a separate collection where I could hide all the undesired objects.
So now I have my dining room with the instanced tables, but also with the plate and the 4 Suzannes sitting there on the floor.
It would be nice if this part of linking and instancing worked like in 2.79 again.
Here's the 2 files:
fancy_table.blend

dining_room.blend

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX 1080 **Blender Version** Broken: 2.80, f4d9e49f286f Worked: 2.79 **Short description of error** This is kind of a follow up of #61683. The crashing has been fixed (thanks @mont29). But now a different weird behavior is happening. If you link a collection instance ("col_A") from a blendfile, and inside that collection ("col_A") is another collection instance ("col_B"), it places the original geometry from "col_B" in the center of the blendfile as well. That messes up the scene of course, both for viewport and rendering. It does work as expected in 2.79, so I would consider this more a bug than design issue. **Exact steps for others to reproduce the error** Testcase: I have a file with a fancy table. There's 4 plates with some delicious Suzannes on them. But to keep the filesize small I have put the plate with the Suzannes on it into a collection "yummy_plate". Then I modelled a table and put 4 instances of the yummy_plate collection on it. The table and the 4 plates I have put into the collection "fancy_table" and saved that as blendfile "fancy_table". Now I am working on the main scene, a dining room. There should be many of those tables, so I link in the collection "fancy_table" from that blendfile. But instead of just placing the instance in the scene (like it used to work in 2.79), Blender now also places the linked object of the plate and the Suzannes in the scene, at the scene origin. Since they are linked I cannot move it out ot the way, nor toggle the renderability button in the outliner. I cannot even move it into a separate collection where I could hide all the undesired objects. So now I have my dining room with the instanced tables, but also with the plate and the 4 Suzannes sitting there on the floor. It would be nice if this part of linking and instancing worked like in 2.79 again. Here's the 2 files: [fancy_table.blend](https://archive.blender.org/developer/F6678240/fancy_table.blend) [dining_room.blend](https://archive.blender.org/developer/F6678241/dining_room.blend)
Author
Member

Added subscribers: @mont29, @sebastian_k

Added subscribers: @mont29, @sebastian_k
Bastien Montagne was assigned by Sebastian Parborg 2019-02-21 17:42:14 +01:00

Hmpff, this is indeed not a desired behavior… Should only instance in scene objects that are directly linked, not indirectly linked ones...

Note that you can always manually unlink the yummy_plate collection from the scene, though. ;)

Hmpff, this is indeed not a desired behavior… Should only instance in scene objects that are directly linked, not indirectly linked ones... Note that you can always manually unlink the `yummy_plate` collection from the scene, though. ;)

This issue was referenced by 683e64247f

This issue was referenced by 683e64247f060acbb8b9ba9178e7555dc57aa10b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61796
No description provided.